# meshinfo

./: .gitignore  README.md  main.py  main_mesh.py  main_pc.py  pyproject.toml  requirements.txt
docs/: INFO.md  MESH_VIEWER.md  POINT_CLOUD_VIEWER.md  VIEWER.md
meshanalysis/analysis/: __init__.py  mesh.py
meshanalysis/buffer/: mesh_buffer.py  point_buffer.py
meshanalysis/utils/: io.py
meshinfo/: __init__.py  constants.py  mesh.py
meshinfo/analysis/: __init__.py  mesh.py  pc.py
meshinfo/buffer/: buffer.py  mesh_buffer.py  point_buffer.py
meshinfo/utils/: io.py
viewer/: buffer.py  constants.py  meshviewer.py
viewer/utils/: io.py
